<resources>
    <string name="app_name">LanProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_4">Activity 4</string>
    <string name="activity_5">Activity 5</string>
    <string name="chose_your_desired_activity">Choose your desired task</string>
    <string name="start">Start task</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="register">Register</string>
    <string name="no_login_register_to_access_the_tests">No login? Register to access the tests</string>
    <string name="test">test</string>
    <string name="new_test">New Test</string>
    <string name="logout">Logout</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="history">Task history</string>
    <string name="activity">Activity:</string>
    <string name="points">Points:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="date">Date:</string>
    <string name="insert">Insert</string>
    <string name="ReqFieldError">Required Field</string>
    <string name="PasswordMatchError">Passwords do not match</string>
    <string name="IncorrectCredentials">Wrong Username or Password</string>
    <string name="Answer">Answer</string>
    <string name="UsernameTaken">This Username is already taken</string>
    <string name="ConnectFail">Connection to database failed</string>
    <string name="Error">Unhandled error occurred</string>
    <string name="PasswordToShort">The password is to short</string>
    <string name="LanguideLoginGreeting">Sign in to access LanGuide</string>
    <string name="FinishTest">Finish test</string>
    <string name="Instructions">Instructions</string>
    <string name="PlayPauseDescription">Mediaplayer play/pause button</string>
    <string name="SdkWarning">Time is in UTC_0, SDK-v26 required for time conversion</string>

    <string-array name="ActivityList">
        <item>Reading Task</item>
        <item>Listening Task</item>
    </string-array>

    <!-- TODO remove placeholders -->
    <string-array name="Task1Placeholder">
        <item>Veritatis</item>
        <item>Animi</item>
        <item>dolores</item>
        <item>cupiditate</item>
        <item>perspiciatis</item>
    </string-array>

    <string-array name="Roles">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

</resources>