<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity">

    <TextView
        android:id="@+id/TextViewTitlePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/chose_your_desired_activity"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonStartActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="ActivityView"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeekBarDifficulty" />

    <Spinner
        android:id="@+id/SpinnerActivityChoice"
        android:layout_width="173dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:entries="@array/ActivityList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewTitlePrompt" />

    <SeekBar
        android:id="@+id/SeekBarDifficulty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="243dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:max="2"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerActivityChoice" />

    <TextView
        android:id="@+id/TextViewDifficultyEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeekBarDifficulty" />

    <TextView
        android:id="@+id/TextViewDifficultyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/medium"
        app:layout_constraintEnd_toStartOf="@+id/TextViewDifficultyHard"
        app:layout_constraintStart_toEndOf="@+id/TextViewDifficultyEasy"
        app:layout_constraintTop_toBottomOf="@+id/SeekBarDifficulty" />

    <TextView
        android:id="@+id/TextViewDifficultyHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeekBarDifficulty" />
</androidx.constraintlayout.widget.ConstraintLayout>