<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPageActivity">

    <EditText
        android:id="@+id/PlainTextRegisterUsername"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordRegisterpswd"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlainTextRegisterUsername" />

    <EditText
        android:id="@+id/PasswordReRegisterpswd"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordRegisterpswd" />

    <Spinner
        android:id="@+id/RoleSpinner"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:entries="@array/Roles"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordReRegisterpswd" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RoleSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>